src/objects/Apttus_Billing__RelatedARTransaction__c.object
<CustomObject>
    <description>Represents a single AR transaction related to the invoice</description>
    <fields>
        <fullName>Apttus_Billing__ARImpactAmount__c</fullName>
        <description>The A/R impacting amount</description>
        <inlineHelpText>The A/R impacting amount</inlineHelpText>
        <label>A/R Impact Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CollectionStatus__c</fullName>
        <description>The invoice collection status</description>
        <inlineHelpText>The invoice collection status</inlineHelpText>
        <label>Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Collections</fullName>
                </value>
                <value>
                    <fullName>Transferred to Collections Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Description__c</fullName>
        <description>Allows integrations to write in a description.</description>
        <inlineHelpText>Allows integrations to write in a description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EndingInvoiceBalance__c</fullName>
        <description>The invoice balance after applying the transaction</description>
        <inlineHelpText>The invoice balance after applying the transaction</inlineHelpText>
        <label>Ending Invoice Balance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ExternalSystemStatus__c</fullName>
        <description>The external system status</description>
        <inlineHelpText>The external system status</inlineHelpText>
        <label>External System Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IntegrationDate__c</fullName>
        <description>The integration date</description>
        <inlineHelpText>The integration date</inlineHelpText>
        <label>Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceId__c</fullName>
        <description>ID of the related invoice</description>
        <inlineHelpText>ID of the related invoice</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
        <relationshipName>RelatedTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReasonCode__c</fullName>
        <description>Allows integrations to write in the reason code for the transaction.</description>
        <inlineHelpText>Allows integrations to write in the reason code for the transaction.</inlineHelpText>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RelatedTxnId__c</fullName>
        <description>External System Transaction Id.</description>
        <inlineHelpText>External System Transaction Id.</inlineHelpText>
        <label>Related Txn Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__StartingInvoiceBalance__c</fullName>
        <description>The invoice balance before applying the transaction</description>
        <inlineHelpText>The invoice balance before applying the transaction</inlineHelpText>
        <label>Starting Invoice Balance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalCreditsApplied__c</fullName>
        <description>The total credits applied to-date</description>
        <inlineHelpText>The total credits applied to-date</inlineHelpText>
        <label>Total Credits Applied (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalPaymentsApplied__c</fullName>
        <description>The total payments applied to-date</description>
        <inlineHelpText>The total payments applied to-date</inlineHelpText>
        <label>Total Payments Applied (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalRefindsApplied__c</fullName>
        <description>The total refunds applied to-date</description>
        <inlineHelpText>The total refunds applied to-date</inlineHelpText>
        <label>Total Refunds Applied (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalRefundsApplied__c</fullName>
        <description>The total refunds applied to-date</description>
        <inlineHelpText>The total refunds applied to-date</inlineHelpText>
        <label>Total Refunds Applied (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TxnAmount__c</fullName>
        <description>The transaction amount</description>
        <inlineHelpText>The transaction amount</inlineHelpText>
        <label>Txn Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TxnDate__c</fullName>
        <description>The transaction date</description>
        <inlineHelpText>The transaction date</inlineHelpText>
        <label>Txn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TxnEffectiveDate__c</fullName>
        <description>The transaction effective date</description>
        <inlineHelpText>The transaction effective date</inlineHelpText>
        <label>Txn Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TxnNumber__c</fullName>
        <description>The transaction number</description>
        <externalId>true</externalId>
        <inlineHelpText>The transaction number</inlineHelpText>
        <label>Txn Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TxnType__c</fullName>
        <description>The transaction type</description>
        <inlineHelpText>The transaction type</inlineHelpText>
        <label>Txn Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Creation</fullName>
                </value>
                <value>
                    <fullName>Standard Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Invoice</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
                <value>
                    <fullName>Payment Reversal</fullName>
                </value>
                <value>
                    <fullName>Refund Reversal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related A/R Transaction</label>
    <nameField>
        <displayFormat>TX-{00000000}</displayFormat>
        <label>Txn Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related A/R Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>